--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,6 @@ body {
 }
 .footer {
   background-color: #2E2F42;
-        width: 100%;
         max-width: 1440px;
         height: 312px;
         display: flex;
@@ -121,8 +120,8 @@ body {
     font-family: "Raleway", sans-serif;
     width: 700;
     font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
+    line-height: 21px;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5
     text-decoration: none;
