--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:#2E2F42;
@@ -70,7 +70,7 @@ body {
     cursor: pointer;
 }
 .features-title { }
-.feature-list{ 
+.feature-list { 
     font-family: "Roboto", sans-serif;
     width: 500;
     font-size: 20px;
