--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,9 @@ body {
 }
 .hero {
     background: #2E2F42;
-    width: 100%;
-    max-width: 1440px;
+    font-weight: 1440px;
     height: 600px;
+    margin-top: 72px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +49,7 @@ body {
 }
 .hero-title {
     font-family: "Roboto", sans-serif;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 56px;
     line-height: 60px;
     letter-spacing: 0.02em;
@@ -69,7 +69,8 @@ body {
     border: none;
     cursor: pointer;
 }
-.features-title { }
+.features-title { 
+}
 .feature-list { 
     font-family: "Roboto", sans-serif;
     width: 500;
@@ -127,7 +128,7 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5
+    color: #4D5AE5;
     text-decoration: none;
 }
 .logo-footer-accent {
