--- a/css/styles.css
+++ b/css/styles.css
@@ -3,24 +3,34 @@ body {
     background-color: #ffffff;
     color: #434455;
     width: 1440px;
-    height: 3300px;
+    height: 72px;
     padding: 16px 8px;
     border-bottom: 1px;
     border:none ;
-}
+    position:fixed;
+    left: 0;
+    top: 0;
+    box-sizing: border-box;
+    display:flex;
+    align-items:center;
+    flex-direction: column;
+    gap:0;
+    border: radius 0;
+    box-shadow: none;
+    order: 0;
+    flex-grow: 0;
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-h-spacing: 0.03em;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color:#2E2F42;
     text-decoration: none;
 }
 
 .logo-accent {
-    color: eight: 1.17;
-    letter#4D5AE5;
+    color:#4D5AE5;
 }
 .nav-list{
     font-family: "Roboto", sans-serif ;
@@ -132,7 +142,12 @@ body {
     color: #4D5AE5;
     text-decoration: none;
 }
+
 .logo-footer-accent {
-    color: #F4F4FD ;
-    text-decoration: none;
+    color: #F4F4FD;
 }
+
+
+
+
+
