--- a/css/styles.css
+++ b/css/styles.css
@@ -2,35 +2,21 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
     color: #434455;
-    width: 1440px;
-    height: 72px;
-    padding: 16px 8px;
-    border-bottom: 1px;
-    border:none ;
-    position:fixed;
-    left: 0;
-    top: 0;
-    box-sizing: border-box;
-    display:flex;
-    align-items:center;
-    flex-direction: column;
-    gap:0;
-    border: radius 0;
-    box-shadow: none;
-    order: 0;
-    flex-grow: 0;
+   
+
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color:#2E2F42;
+    color: #4D5AE5;
     text-decoration: none;
 }
 
 .logo-accent {
-    color:#4D5AE5;
+    color:##2E2F42;
 }
 .nav-list{
     font-family: "Roboto", sans-serif ;
