--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,24 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
     color: #434455;
-   
 
-.logo {
+    position: relative;
+    left: 0;
+    top: 0;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding: 16px 8px;
+    flex-direction: column;
+    gap: 0;
+    border-radius: 0;
+    box-shadow: none;
+    order: 0;
+    flex-grow: 0;
+    border-bottom: none;
+}
+
+    .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -16,7 +31,7 @@ body {
 }
 
 .logo-accent {
-    color:##2E2F42;
+    color:#2E2F42;
 }
 .nav-list{
     font-family: "Roboto", sans-serif ;
