--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,13 @@ body {
 }
 
 .logo {
-    font-family: "Releway", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
-    letter-spacing: 0.03;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4b5ae5;
+    color: #4d5ae5;
 }
 .logo-accent {
     color: #2E2F42;
