--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,11 @@ body {
 .logo-accent {
     color: #2E2F42;
 }
+.nav {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
