--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,15 @@ body {
     color: #2E2F42;
 }
 .nav {
+    color: #2E2F42;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+
+}
+.nav-link:hover,
+.nav-link:focus {  
+    color: #404bbf ;
 }
