--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,11 @@ body {
 .nav-link:focus {  
     color: #404bbf ;
 }
+.address {
+    font-family: "Roboto", ;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
