--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,18 @@ body {
     color: #404bbf ;
 }
 .address {
-    font-family: "Roboto", ;
-    font-weight: 400;
+    font-family: "Roboto", sans-serif ;
+    font-style: normal;
+}
+.address-link {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #434455;
+    font-weight: 400;
+    text-decoration: none;
+}
+.address-link:hover,
+.address-link:focus {
+    color: #404bbf;
 }
