--- a/css/styles.css
+++ b/css/styles.css
@@ -47,4 +47,14 @@ body {
 .address-link:hover,
 .address-link:focus {
     color: #404bbf;
-}
+
+    .hero {
+        background-color:#2e2f42;
+        font-size: 56px;
+        line-height: 1.07;
+        text-align: center;
+        letter-spacing: 0.02em;
+    }
+    .hero-title {
+        color: #ffffff;}
+        
