--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ body {
 .address-link:hover,
 .address-link:focus {
     color: #404bbf;
-
+}
     .hero {
         background-color:#2e2f42;
         font-size: 56px;
@@ -56,7 +56,8 @@ body {
         letter-spacing: 0.02em;
     }
     .hero-title {
-        color: #ffffff;}
+        color: #ffffff;
+    }
     .hero-button{
         background-color: #4d5ae5;
         font-weight: 500;
@@ -67,5 +68,5 @@ body {
     }
     .hero-button:hover,
     .hero-button:focus {
-        background-color: ##404BBF;
+        background-color: #404BBF;
     }
