--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,9 @@ body {
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
-        letter-spacing: 0.04;
+        letter-spacing: 0.04em;
         color: #ffffff;
+        cursor: pointer;
     }
     .hero-button:hover,
     .hero-button:focus {
