--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,14 @@ body {
         line-height: 0.02em;
         line-height: 1.5;
     }
+    .team {
+        background-color: #F4F4FD;
+    }
+    .our-team {
+        font-size: 36px;
+        line-height: 1.11;
+        text-align: center;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: #2e2f42;
+    }
