--- a/css/styles.css
+++ b/css/styles.css
@@ -76,17 +76,19 @@ body {
     }
     .features {
         font-family: "Roboto", sans-serif;
+      
+    }
+    .features-title {
+        color: #2E2F42;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02;
     }
-    .features-title {
-        color: #2E2F42;
-    }
     .feature-text {
         line-height: 0.02em;
         line-height: 1.5;
+        font-size: 16px;
     }
     .team {
         background-color: #F4F4FD;
