--- a/css/styles.css
+++ b/css/styles.css
@@ -78,17 +78,18 @@ body {
         font-family: "Roboto", sans-serif;
       
     }
-    .features-title {
+        .feature-list {
         color: #2E2F42;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
-        letter-spacing: 0.02;
+        letter-spacing: 0.02em;
     }
     .feature-text {
         line-height: 0.02em;
         line-height: 1.5;
         font-size: 16px;
+        color: #434455;
     }
     .team {
         background-color: #F4F4FD;
