--- a/css/styles.css
+++ b/css/styles.css
@@ -86,10 +86,10 @@ body {
         letter-spacing: 0.02em;
     }
     .feature-text {
-        line-height: 0.02em;
         line-height: 1.5;
         font-size: 16px;
         color: #434455;
+        letter-spacing: 0.02em;
     }
     .team {
         background-color: #F4F4FD;
