--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,15 @@ body {
 .logo-accent {
     color: #2E2F42;
 }
-.nav {
-    color: #2E2F42;
+
+.nav-link {
+    color: #2e2f42;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
+    text-decoration: none;
 }
 .nav-link:hover,
 .nav-link:focus {  
