--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,10 @@ body {
         text-transform: capitalize;
         color: #2e2f42;
     }
+    .team-name{
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+    }
