--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,15 @@ body {
         font-family: "Roboto", sans-serif;
       
     }
+        .features-title {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            color: #2e2f42;
+            
+        }
+
         .feature-list {
         color: #2E2F42;
         font-weight: 500;
