--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ body {
         font-family: "Roboto", sans-serif;
       
     }
-        .features-title {
+        .feature-title {
             font-weight: 500;
             font-size: 20px;
             line-height: 1.2;
