--- a/css/styles.css
+++ b/css/styles.css
@@ -119,3 +119,10 @@ body {
         letter-spacing: 0.02em;
         color: #2E2F42;
     }
+    .team-list{
+        background-color: #ffffff;
+    }
+    .team-role {
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
