--- a/css/styles.css
+++ b/css/styles.css
@@ -133,5 +133,12 @@ body {
         letter-spacing: 0.02em;
         text-transform: capitalize;
         color:#2e2f42;
-        
+
+    }
+    .portfolio-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
     }
