--- a/css/styles.css
+++ b/css/styles.css
@@ -143,3 +143,9 @@ ul {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+.portfolio-text {
+    font-size: 16px;
+    list-style: 1.5;
+    letter-spacing: 0.02em;
+    
+}
