--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,26 @@ ul {
 }
 .portfolio-text {
     font-size: 16px;
-    list-style: 1.5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    
+}
+.footer {
+    background-color: #2E2F42;
+}
+.footer-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+logo-accent {
+    color: #F4F4FD;
+}
+.footer-text {
+    line-height: 1.5;
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
 }
