--- a/css/styles.css
+++ b/css/styles.css
@@ -156,15 +156,15 @@ ul {
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
-    letter-spacing: 0.03;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-}
-logo-accent {
-    color: #F4F4FD;
 }
 .footer-text {
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
+}
+.footer-logo-accent {
+    color: #F4F4FD;
 }
