--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    text-decoration: none;
 }
 .logo-accent {
     color: #2E2F42;
@@ -159,6 +160,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    text-decoration: none;
 }
 .footer-text {
     line-height: 1.5;
